src/waiterPopUpStyle.css
#confirmationModal {
    display: none;
    position: fixed;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #fff;
    border-radius: 20px;
    border: 1px solid #ccc;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    background-color: rgba(204, 197, 197, 0.944);
    padding: 20px;
    width: 700px;
    height: 400px;
    text-align: center;
    z-index: 1;
}

.modalText {
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 20px;
}

.modalButton {
    background-color: #4CAF50;
    color: #fff;
    padding: 15px 15px;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    cursor: pointer;
    margin: 0 10px;
    font-size: 30px;
}

.modalButton:hover {
    background-color: rgb(175, 17, 17);
    border: none;

}

.popUpMainContainer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.waiterIcon {
    max-width: 100%;
    height: auto;
    border-radius: 50%; 
    margin-bottom: 20px;
}

